dataset123/2025-2/610742602/users/14016319/executions/677928262_2667036473.log
== SUBMISSION (2025-08-21 21:43:29)
-- CODE: 
TempC = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Insira a temperatura aqui293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Insira a temperatura aqui263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Insira a temperatura aqui233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Insira a temperatura aqui373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Insira a temperatura aqui273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Insira a temperatura aqui303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:18)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:14)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round(TempK,2)))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:36:50)
-- CODE: 
int(input(Kelvin = Celsius + 273.15))
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:56)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC+273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:19)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:26)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:36:52)
-- CODE: 
int(input(Kelvin = Celsius + 273.15))
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(Kelvin = Celsius + 273.15))
                       ^^^^^^^
NameError: name 'Celsius' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:40)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC + 273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 21:42:55)
-- CODE: 
Temp = float(input("Insira a temperatura aqui"))
TempK = TempC+273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    TempK = TempC+273.15
            ^^^^^
NameError: name 'TempC' is not defined. Did you mean: 'Temp'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
